# Fighting_the_Flu

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: ps_no_compound.py  template.html
.codex/: hooks.json
.codex/hooks/: check_sync.py  md_to_html.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/stages/: stage1.json  stage2.json  stage3.json  stage4.json  stage99.json
docs/: agent_guide_shared.md  claude_fix_instructions.md  design.md  fighting_the_flu_script.md  stage3_authored_terrain_plan.md  stage_visual_concepts.md  tools.md
pr-html/_fancydemo/: fancy_demo.html
pr-html/_reportdemo/: tools.html
pr-html/_selftest/: demo.html
tests/: test_behavior.py  test_consistency.py  test_crawler_climb.py  test_smoke.py  test_visual_regression.py
tools/: analyze_log.py  balance_sheet.py  capture.py  capture_boss_concepts.py  capture_dialogues.py  check_consistency.py  dev_env.py  download_bgm.py  gameplay_clip.py  gen_boss_alert.py  gen_docs.py  gen_dummy_portrait.py  gen_dummy_portraits.py  gen_dummy_se.py  gen_hit_sound.py  gen_ui_sounds.py  gen_virus.py  headless.py  make_stage1_cave_terrain_sheet.py  pr_html.py  pr_media.py  pr_report.py  preview_boss.py  remove_bg.py  run.py  split_rounds.py  stage1_terrain_rects.json  stage3_alpha_mask_common.py  stage3_alpha_mask_editor.py  stage3_composer_report.py  stage3_rect_editor.py  stage3_rect_preview.py  stage3_terrain_composer_preview.py  stage3_terrain_rects.json  stage_designer.py  visual_regression.py
(+87 files in other folders)
