[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infuru-to-no-shito"
version = "0.2.0"
description = "インフルとの死闘 — 2D横スクロールシューティングゲーム"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "Pillow>=10.0.0",   # gameplay_clip の GIF 書き出しに使用
]

[project.scripts]
infuru = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["assets/**/*", "data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
